[gd_scene format=3 uid="uid://lw4sjl4cws8q"]

[ext_resource type="Script" uid="uid://cjm61wm3wga5a" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://biubb72lqc4a3" path="res://assets/icons/cursor_default.png" id="2_lkdrv"]
[ext_resource type="Script" uid="uid://kpxdh62ijq65" path="res://scripts/camera_rig.gd" id="2_qhqgy"]
[ext_resource type="PackedScene" uid="uid://ce1embig558rd" path="res://scenes/HealthBar3D.tscn" id="3_mdl7e"]
[ext_resource type="Texture2D" uid="uid://v23ye4xitolj" path="res://assets/icons/cursor_attack.png" id="3_p7iby"]
[ext_resource type="PackedScene" uid="uid://cjkj6s57v61vn" path="res://scenes/FloatingText.tscn" id="4_bruh7"]
[ext_resource type="Texture2D" uid="uid://dfvukw2s583tt" path="res://assets/icons/cursor_skill.png" id="4_p07f3"]
[ext_resource type="Script" uid="uid://d32apxuk1vawh" path="res://scripts/healthComponent.gd" id="4_qu4a1"]
[ext_resource type="PackedScene" uid="uid://bqulpcolhat05" path="res://effects/LevelUpEffect.tscn" id="5_6eyey"]
[ext_resource type="PackedScene" uid="uid://765vokj83tna" path="res://scenes/GameOverUI.tscn" id="5_qu4a1"]
[ext_resource type="Texture2D" uid="uid://c25ftshpwa0jg" path="res://assets/icons/message_dots_square.png" id="5_viqgg"]
[ext_resource type="Texture2D" uid="uid://b1syjwa46sik" path="res://assets/icons/cursor_door.png" id="6_b8lor"]
[ext_resource type="PackedScene" uid="uid://2h7d5skhop8m" path="res://scenes/SPBar3D.tscn" id="7_spbar"]
[ext_resource type="Script" uid="uid://c0quf3cggmm2i" path="res://scripts/StatsComponent.gd" id="8_khinc"]
[ext_resource type="Resource" uid="uid://cr7luqw1pv8n" path="res://resources/items/AntiFormlessAxe.tres" id="9_b8lor"]
[ext_resource type="Resource" uid="uid://n2amivuv4ep7" path="res://resources/items/FireSword.tres" id="10_6e537"]
[ext_resource type="Script" uid="uid://4gjfq05hu1wt" path="res://scripts/SkillComponent.gd" id="10_d3wef"]
[ext_resource type="Resource" uid="uid://cqun87ymamf71" path="res://resources/items/Knife.tres" id="11_p07f3"]
[ext_resource type="Script" uid="uid://el6ifwj8k7u6" path="res://scripts/SPComponent.gd" id="12_o4126"]
[ext_resource type="Script" uid="uid://bb5m4qisg7fb8" path="res://scripts/RegenerationComponent.gd" id="15_0rnld"]
[ext_resource type="Script" uid="uid://b1hf11y1cgjtr" path="res://scripts/InventoryComponent.gd" id="19_ebwui"]
[ext_resource type="Script" uid="uid://gvc84ejulk4" path="res://scripts/EquipmentComponent.gd" id="19_sfy4j"]
[ext_resource type="Script" uid="uid://dc22adx2f2fi3" path="res://scripts/StatusEffectManager.gd" id="20_gv3ic"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aqk2v"]
albedo_color = Color(0.19338313, 0.65526867, 0.66791755, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dqkch"]
material = SubResource("StandardMaterial3D_aqk2v")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qlg0r"]

[sub_resource type="ViewportTexture" id="ViewportTexture_6e537"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_p07f3"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6dkly"]
albedo_color = Color(0.056243494, 0.007778925, 0.03827338, 1)

[sub_resource type="SphereMesh" id="SphereMesh_6eyey"]
material = SubResource("StandardMaterial3D_6dkly")
radius = 0.05
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p7iby"]
transparency = 1
albedo_color = Color(0.45882353, 0.18431373, 0.21176471, 0.7490196)

[sub_resource type="CylinderMesh" id="CylinderMesh_0rnld"]
material = SubResource("StandardMaterial3D_p7iby")
top_radius = 1.0
bottom_radius = 1.0
height = 0.01

[node name="Player" type="CharacterBody3D" unique_id=1179624594 groups=["player"]]
script = ExtResource("1_g2els")
speed = 8.0
cursor_default = ExtResource("2_lkdrv")
cursor_attack = ExtResource("3_p7iby")
cursor_skill = ExtResource("4_p07f3")
cursor_talk = ExtResource("5_viqgg")
cursor_door = ExtResource("6_b8lor")
initial_inventory = Array[Resource]([ExtResource("9_b8lor"), ExtResource("10_6e537"), ExtResource("11_p07f3")])
floating_text_scene = ExtResource("4_bruh7")
level_up_effect_scene = ExtResource("5_6eyey")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." unique_id=167663048]

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=461812279]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8072171, 0)
mesh = SubResource("CapsuleMesh_dqkch")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=732221772]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9159521, 0)
shape = SubResource("CapsuleShape3D_qlg0r")

[node name="CameraPivot" type="Node3D" parent="." unique_id=764086905]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 1.8, 0)
top_level = true
script = ExtResource("2_qhqgy")
zoom_speed = 2.0

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot" unique_id=795005348]
spring_length = 8.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D" unique_id=1839852354]
current = true
fov = 84.6

[node name="HealthBar3D" parent="." unique_id=1218748725 groups=["player"] instance=ExtResource("3_mdl7e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.032414615, 0)
texture = SubResource("ViewportTexture_6e537")

[node name="SPBar3D" parent="." unique_id=1609834012 groups=["player"] instance=ExtResource("7_spbar")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.110826455, 0)
texture = SubResource("ViewportTexture_p07f3")

[node name="HealthComponent" type="Node" parent="." unique_id=347607018]
script = ExtResource("4_qu4a1")
max_health = 1

[node name="SPComponent" type="Node" parent="." unique_id=810258990]
script = ExtResource("12_o4126")

[node name="StatsComponent" type="Node" parent="." unique_id=1372930636]
script = ExtResource("8_khinc")
str_stat = 9
dex = 9
current_level = 5
race = 7

[node name="SkillComponent" type="Node" parent="." unique_id=1172722662]
script = ExtResource("10_d3wef")

[node name="InventoryComponent" type="Node" parent="." unique_id=1940651935]
script = ExtResource("19_ebwui")

[node name="RegenerationComponent" type="Node" parent="." unique_id=838240900]
script = ExtResource("15_0rnld")

[node name="EquipmentComponent" type="Node" parent="." unique_id=1701170461]
script = ExtResource("19_sfy4j")

[node name="StatusEffectManagerComponent" type="Node" parent="." unique_id=203511814]
script = ExtResource("20_gv3ic")

[node name="GameOverUI" parent="." unique_id=1480085280 instance=ExtResource("5_qu4a1")]

[node name="eye" type="MeshInstance3D" parent="." unique_id=712278464]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.049024224, 1.2367133, -0.4945358)
mesh = SubResource("SphereMesh_6eyey")

[node name="eye2" type="MeshInstance3D" parent="." unique_id=2045127416]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.1563986, 1.2367133, -0.4945358)
mesh = SubResource("SphereMesh_6eyey")

[node name="AOEIndicator" type="MeshInstance3D" parent="." unique_id=288806777]
visible = false
mesh = SubResource("CylinderMesh_0rnld")
